# etf-data-analysis-dashboard

./: .gitignore  README.md  pyproject.toml
notebooks/: data_exploration.ipynb
src/: app.py
src/etf_data_analysis_dashboard/: __init__.py  config.py
src/etf_data_analysis_dashboard/data/: clean_data.py  io.py
src/etf_data_analysis_dashboard/steps/: data_preparation.py
