[project]
name = "etf-data-analysis-dashboard"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Nikolaos Mavromatis", email = "nck.mavromatis@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "fastparquet>=2024.11.0",
    "loguru>=0.7.3",
    "pandas>=2.2.3",
    "pyarrow>=19.0.1",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
    "streamlit>=1.43.2",
    "yfinance>=0.2.54",
]

[project.scripts]
etf-data-analysis-dashboard = "etf_data_analysis_dashboard:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.1",
    "nbformat>=5.10.4",
    "plotly>=6.0.1",
]
